# tigr-minimal-cmake

./: CMakeLists.txt
